@startuml
  ' State Machine
  class StateMachine {
    +UUID id
    +String name
    +Boolean isActive
    +List<StateMachineStatus> statuses
    +List<StateMachineTransition> transitions
    +void create()
    +StateMachine getById(UUID id)
    +void disableById(UUID id)
  }

  ' Status
  class StateMachineStatus {
    +UUID id
    +UUID stateMachineId
    +String name
    +Boolean isInitial
    +Boolean isActive
    +void create()
    +StateMachineStatus getById(UUID id)
    +void disableById(UUID id)
  }

  ' Transition
  class StateMachineTransition {
    +UUID id
    +UUID stateMachineId
    +UUID sourceStatusId
    +UUID targetStatusId
    +Boolean isActive
    +void create()
    +StateMachineTransition getById(UUID id)
    +void disableById(UUID id)
  }

  ' Event
  class StateMachineEvent {
    +UUID id
    +UUID stateMachineId
    +UUID statusId
    +void create()
    +void updateStateById(UUID eventId, UUID newStatusId)
  }


' Relações
StateMachine "1" -- "0..*" StateMachineStatus : statuses
StateMachine "1" -- "0..*" StateMachineTransition : transitions
StateMachineStatus "0..*" -- "0..*" StateMachineTransition : source/target
StateMachine "1" -- "0..*" StateMachineEvent : events

@enduml
